spec/fixtures/modules/error/plans/outer.pp
plan error::outer(
) {
  run_plan('error::inner')
}
